fix overflowing law title

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -317,7 +317,7 @@ ins {
 	font-size: 16px;
 	margin-top: 20px;
     float: left;
-    width:80%;
+    width: 90%;
 }
 .separator .links{
     float: right;
